fix: overflow in openvisit panel

--- a/src/css/open_visit.css
+++ b/src/css/open_visit.css
@@ -10,6 +10,11 @@
   padding: 10px 30px 0px 30px;
 }
 
+#content_panel {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
 #media_container {
   display: none;
   padding: 0px 30px 0px 30px;
